# legaldoc

./: additional_requirements.txt  app.py  build.sh  document_analyzer.py  forgery_detector.py  models.py  pyproject.toml  render-requirements.txt  render.yaml  render_build.sh  scam_detector.py  setup.py  text_extractor.py
attached_assets/: Pasted-AI-Powered-Legal-Document-Verifier-App-Development-Prompt-Goal-Create-an-AI-based-web-mobile--1745161814110.txt
static/css/: custom.css
static/js/: main.js
templates/: history.html  index.html  layout.html  report.html
