[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "spacy>=3.8.5",
    "werkzeug>=3.1.3",
]

[tool.poetry]
name = "legal-document-verifier"
version = "1.0.0"
description = "AI-powered legal document verification app"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
docx = ">=0.2.4"
email-validator = ">=2.2.0"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
numpy = ">=2.2.5"
opencv-python = ">=4.11.0.86"
pdf2image = ">=1.17.0"
pillow = ">=11.2.1"
psycopg2-binary = ">=2.9.10"
pypdf2 = ">=3.0.1"
pytesseract = ">=0.3.13"
python-docx = ">=1.1.2" 
spacy = ">=3.8.5"
werkzeug = ">=3.1.3"
